# paper-radar

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  chat_db.py  db.py  docker-compose.yml  docker-entrypoint.sh  feedback_db.py  notify_bot.py  paper_arxiv_search.py  paper_figure.py  paper_markdown.py  paper_render.py  paper_s2.py  paper_voice.py  prompts.py  pyproject.toml  radar.py  rerank.py  telegram_client.py  watch_db.py  watch_runner.py  weekly_rollup.py
.devcontainer/: devcontainer.json
cron/: paper_radar.crontab
docs/superpowers/plans/: 2026-04-20-telegram-qa-bot.md
docs/superpowers/specs/: 2026-04-20-telegram-qa-bot-design.md
papers_fig/: 2502.07408.caption.txt  2604.13074.caption.txt  2604.16044.caption.txt
tests/agents/paper_radar/: conftest.py  test_bot.py  test_chat_db.py  test_feedback_db.py  test_markdown_to_tg.py  test_notify_bot.py  test_paper_arxiv_search.py  test_paper_figure.py  test_paper_markdown.py  test_paper_markdown_sanitize.py  test_paper_s2.py  test_paper_voice.py  test_prompts.py  test_radar_enrichment.py  test_rank_by_interest.py  test_rerank.py  test_telegram_client.py  test_watch_db.py  test_watch_runner.py  test_weekly_rollup.py
verify/: __init__.py  verify_bot.py  verify_fetch.py  verify_notion.py  verify_summarize.py  verify_telegram.py
